--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,16 +34,53 @@ body {
 }
 
 .prose h1 {
-  font-size: 2rem;
+  background-color: #2b2f39;
+  color: white;
   font-weight: bold;
+  font-size: 1.5rem;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+/* 擬似的に左帯を中に差し込む */
+.prose h1::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 8px;
+  height: 100%;
+  background: linear-gradient(to bottom, #c471f5, #fa71cd);
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.prose h2 {
+  position: relative;
+  color: white;
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
 
-.prose h2 {
-  font-size: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 0.75rem;
+.prose h2::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: linear-gradient(to right, #a8ffeb, #d2fff2);
+  border-radius: 9999px;
 }
 
 .prose p {
