--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@ body {
   left: 0;
   height: 2px;
   width: 100%;
-  background: linear-gradient(to right, #a8ffeb, #d2fff2);
+  background: linear-gradient(to right, #00B8F1, #00b682);
   border-radius: 9999px;
 }
 
