--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,6 +127,8 @@ body {
   color: greenyellow;
 }
 
+
+/* 404 error */
 @keyframes rainbow {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
