--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,6 @@ body {
   margin-bottom: 1rem;
   position: relative;
   overflow: hidden;
-  transition: background-color 0.3s, color 0.3s;
   background-color: #ece1e1; 
   color: black;
 }
@@ -130,10 +129,11 @@ body {
 .prose a {
   color: purple;
   font-weight: bold;
+  transition: color 0.2s;
 }
 
 .prose a:hover {
-  color: greenyellow;
+  color: #5ff0c4;
 }
 
 
@@ -165,4 +165,10 @@ body {
   white-space: pre-wrap !important;
   word-break: break-word !important;
   overflow-wrap: break-word !important;
+}
+
+@media (max-width: 640px) {
+  pre code {
+    font-size: 12px;
+  }
 }
